--- a/raport1.qmd
+++ b/raport1.qmd
@@ -6,9 +6,9 @@ authors: "Bartosz Łuksza, Rafał Głodek"
 
 ### Wprowadzenie
 
-Muzyka towarzyszy człowiekowi od tysięcy lat. Zawsze stanowiła nieodłączną część naszej kultury. Niestety ograniczenia technologiczne przez długi czas nie pozwalały artystom utrwalić swoich dzieł. Fonografia narodziła się w XIX wieku, a jej największy rozkwit przypada na drugą połowę wieku XX. Z tego względu najstarsze oryginalne dzieła muzyczne, do których mamy obecnie dostęp pochodzą poprzedniego stulecia. W naszej pracy zajrzymy wgłąb współczesnej historii muzyki i przeanalizujemy najlepiej oceniane albumy muzyczne przez użytkowników RateYourMusic.com - największego portalu do oceniania muzyki w internecie. W jakich latach powstawało najwięcej "dobrych" albumów?Czy istnieje korelacja między średnią oceną użytkowników a datą wydania dzieła?Jakie są średnie średnie ocen dla różnych gatunków muzycznych i sprawdzimy. Którzy artyści wydali najwięcej dobrze ocenianych albumów. Na te i wiele innych pytań odpowiemy w naszej pracy.
+Muzyka towarzyszy człowiekowi od tysięcy lat. Zawsze stanowiła nieodłączną część naszej kultury. Niestety ograniczenia technologiczne przez długi czas nie pozwalały artystom utrwalić swoich dzieł. Fonografia narodziła się w XIX wieku, a jej największy rozkwit przypada na drugą połowę wieku XX. Z tego względu najstarsze oryginalne dzieła muzyczne, do których mamy obecnie dostęp pochodzą poprzedniego stulecia. W naszej pracy zajrzymy wgłąb współczesnej historii muzyki i przeanalizujemy najlepiej oceniane albumy muzyczne przez użytkowników RateYourMusic.com - największego portalu do oceniania muzyki w internecie. W jakich latach powstawało najwięcej "dobrych" albumów? Czy istnieje korelacja między średnią oceną użytkowników a datą wydania dzieła? Jakie są średnie ocen dla różnych gatunków muzycznych? Którzy artyści wydali mogą się poszczycić najlepiej ocenianią twórczością? Na te i wiele innych pytań odpowiemy w naszej pracy.
 
-```{r, include=False}
+```{r, include=FALSE}
 library(tidyverse)
 ```
 
